# ocaml_inets

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  dune-project  ocaml_inets.opam
benchmarks/: dune  fib_inet_simple.ml  fib_par.ml  fib_seq.ml
benchmarks/Inpla/: fib20.in  fib25.in  fib30.in  fib35.in
benchmarks/RunInets/: fibonacci20.inet  fibonacci25.inet  fibonacci30.inet  fibonacci35.inet
examples/: dune  expr.ml  fib.ml  msort.ml  qsort.ml  qsort_array.ml
scripts/: plot_cache_misses.py  plot_cpu_migrations.py  plot_fib_ex.py  plot_speedup.py  plot_speedup_perf.py  plot_tool_comparison.py  run_cache_analysis.sh
